Added scheduling panes, added the scheduling mode in the handlers, adde scheduling mode into the database but I'm not sure why, fixed permissions, bolded the sides, added the min and max for the volume and implemented permissions based minimum and maximum values for paging, music, and masking

--- a/software/src/omaha/templates/components/account-creation-form.html
+++ b/software/src/omaha/templates/components/account-creation-form.html
@@ -118,6 +118,7 @@
             return;
           }, 1000);
         } else {
+          hash = document.cookie.split('; ');
           // some checking needs to be done on this
           this.$.loginAjax.body = {
             level:      parseInt(localStorage.getItem("level")) - 1,
@@ -128,10 +129,7 @@
             phone:      this.$.phone.value,
             speakerid:  parseInt(this.$.speakerid.value), 
             zoneid:     parseInt(this.$.zoneid.value)
-
-            /*
-            name:     this.$.name.value,
-            */
+            //cookie:     hash[1]
           }
           this.$.loginAjax.generateRequest();
         }
