--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -15,6 +15,9 @@
 <link rel="import" href="/bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="/bower_components/paper-item/paper-item.html">
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="/components/simple-fit.html">
+
 <link rel="stylesheet" href="jquery-ui-1.11.4.css">
 <script src="jquery-1.10.2.js" type="text/jscript"></script>
 <!--<script src="jquery-2.2.0.js"></script>-->
@@ -81,10 +84,9 @@
     </style>
 
    <paper-card heading="Equalizer" elevation="4">
-      <div id="card-content" style="height: calc(.68 * 100vh);" class="card-content">         <!-- something might need to be done about the growing to adjust for .6 -> .68 -->
+      <div style="height: calc(.68 * 100vh);" class="card-content">         <!-- something might need to be done about the growing to adjust for .6 -> .68 -->
 
         <paper-radio-group id="equalizerSelector" selected="{{mode}}">
-          <!-- <paper-radio-button id="informationButton" name="information" class="flex">Information</paper-radio-button> -->
           <paper-radio-button id="maskingButton" name="masking"  onclick="modeChanged('masking')"   class="flex">Masking</paper-radio-button>
           <paper-radio-button id="musicButton"   name="music"    onclick="modeChanged('music')"     class="flex">Music</paper-radio-button>
           <paper-radio-button id="pagingButton"  name="paging"   onclick="modeChanged('paging')"    class="flex">Paging</paper-radio-button>
@@ -418,13 +420,6 @@
       default: 
         console.log("SOMETHING WAS WRONG WITH WHAT WAS PASSED TO modeChanged()");
     }
-
-
-
-
-  }
-
-  function equalizerChanged() {
   }
 
 
@@ -736,6 +731,7 @@
       },
 
       ready: function() {
+        console.log("this.$", this.$);
         this.internalEqualizer = this.iirConstantsString;   // does this need to be equalizer?
         equalizerToast = this.$.equalizerToast;
         equalizerMode = this.$.equalizerSelector;
