--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -92,21 +92,20 @@
 
     </style>
     <div id="radio-container" class="layout horizontal">
-      <paper-radio-group id="mode" selected="{{mode}}">
-        <!-- <paper-radio-button id="informationButton" name="information" class="flex">Information</paper-radio-button> -->
-        <paper-radio-button id="volumeButton"     name="volume"     class="flex">Volume</paper-radio-button>
-        <paper-radio-button id="averagingButton"  name="averaging"  class="flex">Comfort Ratio</paper-radio-button>
-        <paper-radio-button id="targetButton"     name="target"     class="flex">Target</paper-radio-button>
-        <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex">Equalizers</paper-radio-button>
-        <paper-radio-button id="pagingButtonRC"     name="paging"     class="flex">Paging</paper-radio-button>
-        <paper-radio-button id="schedulingButton" name="scheduling" class="flex">Scheduling</paper-radio-button>
+      <paper-radio-group id="mode" style="margin-left: 15%;" selected="{{mode}}">
+        <paper-radio-button id="volumeButton"     name="volume"     class="flex"><h3>Volume</h3></paper-radio-button>
+        <paper-radio-button id="averagingButton"  name="averaging"  class="flex"><h3>Comfort Ratio</h3></paper-radio-button>
+        <paper-radio-button id="targetButton"     name="target"     class="flex"><h3>Target</h3></paper-radio-button>
+        <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex"><h3>Equalizers</h3></paper-radio-button>
+        <paper-radio-button id="pagingButtonRC"     name="paging"     class="flex"><h3>Paging</h3></paper-radio-button>
+        <paper-radio-button id="schedulingButton" name="scheduling" class="flex"><h3>Scheduling</h3></paper-radio-button>
       </paper-radio-group>
     </div>
     <neon-animated-pages attr-for-selected="page" selected="[[mode]]" class="flex">
 
       <neon-animatable page="volume" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
-          <volume-selector id="volume" volume="{{volumeLevel}}" musicVolume="{{musicLevel}}"></volume-selector>
+          <volume-selector id="volume" speakerId="[[speaker.id]]" volume="{{volumeLevel}}" musicVolume="{{musicLevel}}"></volume-selector>
         </simple-fit>
       </neon-animatable>
 
@@ -158,6 +157,8 @@
   $( window ).on( "orientationchange", function( event ) {
   $( "#orientation" ).text( "This device is in " + event.orientation + " mode!" );
 });*/
+    //SpeakerToUsername = [];
+    var speakerid = 0;
 
     Polymer({
       is: 'speaker-controller',
@@ -376,7 +377,8 @@
 
       _initializeStatus: function(speaker) {
         this.speakerId = speaker.id;
-        this.ledOn = speaker.ledOn;
+        speakerid = speaker.id;
+        //this.ledOn = speaker.ledOn;
         this.volume = speaker.VolumeLevel[0];
         this.equalizer = speaker.equalizerone;
       },
